# synapse-ai-complete

./: .env.example  .gitignore  DEPLOYMENT.md  LOGGING_GUIDE.md  README.md  deploy.sh  docker-compose.prod.yml  package-lock.json
backend/: .env  .env.example  Dockerfile  Dockerfile.prod  UPGRADE_SUMMARY.md  VALIDATION_FIX_SUMMARY.md  debug_jwt.py  fly.toml  ollama_wrapper.py  pyproject.toml  requirements.txt  start.bat  start.sh  synapse_ai.db  test_database.py  test_execution.py  test_new_system.py
backend/app/: auth.py  database.py  execution_engine.py  llm_router.py  logging_config.py  logging_middleware.py  main.py  prompt_builder.py  prompt_builder_broken.py  rate_limiter.py  security_middleware.py  validation.py
backend/migrations/: 001_initial_schema.sql  README.md  migrate.py
frontend/: .env.example  Dockerfile.prod  index.html  nginx.conf  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: AuthPage.tsx  BillingPage.tsx  ErrorBoundary.tsx  LandingPage.tsx  SettingsPage.tsx  SubscriptionPage.tsx  WelcomeModal.tsx  Workspace.tsx
frontend/src/lib/: api.ts  logger.ts
frontend/src/pages/: Index.tsx  Privacy.tsx  Terms.tsx
nginx/: nginx.conf
nginx/conf.d/: synapse.conf
