[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.116.1"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
pydantic = "^2.11.7"
sqlalchemy = "^2.0.42"
uvicorn = "^0.35.0"
openai = "^1.99.1"
anthropic = "^0.61.0"
httpx = "^0.28.1"
aiofiles = "^24.1.0"
flask = "^3.0.0"
requests = "^2.31.0"
sendgrid = "^6.11.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.18"
stripe = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
